helm-charts/myapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer-dns-do
spec:
  ingressClassName: nginx
  rules:
    - host: mirafzal.uz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 8080
  tls:
    - hosts:
        - mirafzal.uz
      secretName: myapp-cert-secret
